merge with master and fix opening minio url